tests/errors/macro/parser_unexpected_endm.c
#endm

int main()
{
	return 0;
}
